<resources>
    <string name="app_name">ShoppingAppProject</string>
    <string name="app_enter_name">Enter Name</string>
    <string name="app_enter_mobile">Enter Mobile</string>
    <string name="app_enter_email">Enter Email</string>
    <string name="app_enter_password">Enter Password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="create_account">Don\'t Have Account? Create Now!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sender_message">Sender Message</string>
    <string name="support_message">Support Message</string>
    <string name="regarding_last_order">Regarding Last Order</string>
    <string name="regarding_payment">Regarding Payments</string>
    <string name="regarding_order">Regarding Order and Delivery</string>
    <string name="enter_message">Enter Message</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Please confirm delete again!</string>
    <string name="say_hi_by_chat">Hi, this is ChatHelper No.1,\n Please select one of the option so I could help you better!</string>
    <string name="say_hi">Hi, this is Chatbot 001,\n How may I help you?</string>
    <string name="say_hi_by_chat_bot">Hi this is Chatbot</string>
    <string name="product_name">ProductName</string>
    <string name="product_decs">Description</string>
    <string name="price">Price</string>
    <string name="total_price">TotalPrice</string>
    <string name="total_cart_amount">Total Cart Amount</string>
    <string name="amount">Amount</string>
    <string name="place_order">Place Order</string>
    <string name="searchTitle">Search</string>
    <string name="home_page">HomePage</string>
    <string name="cart_details">Cart Details</string>
    <string name="order_page">Order Page</string>
    <string name="logout">Logout Account</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_phone">User Phone</string>
    <string name="already_have_account">Already have account? Let\'s Sign in!</string>
    <string name="title">Title</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="type_in_product">Type in product name</string>
    <string name="product_parameters">Product Parameters</string>
    <string name="customer_review">Customer Review</string>
    <string name="product_title">Product Title</string>
    <string name="review_title">Review Title</string>
    <string name="review_details">Review</string>
    <string name="count">1</string>
    <string name="address">Address</string>
    <string name="payment">Payment Method</string>
    <string name="order_date">Order Date</string>
    <string name="order_amount">Amount</string>
    <string name="order_status">Order Status</string>
    <string name="order_list">Your Order List</string>
    <string name="order_id">Order ID</string>
    <string name="product_unit_price">Unit price</string>
    <string name="product_quantity">Quantity</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_title">Payment_title</string>
    <string name="payment_info">Payment Information</string>
    <string name="confirm_place"><![CDATA[Confirm & Place Order]]></string>
    <string name="add_address">Please Add Your Address</string>
    <string name="address_title">Please Enter Address Title</string>
    <string name="enter_address">Please Enter Your Address</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="total_bill_amount_value">Amount</string>
    <string name="next">Next</string>
    <string name="select_address">Select Your Delivery Address</string>
    <string name="btn_add_address">Add Address</string>
    <string name="add_new_address">Add Address</string>
    <string name="select_payment">Select Your Payment Option</string>
    <string name="radio_payment_1">Cash On Delivery</string>
    <string name="radio_payment_2">Online Banking Account</string>
    <string name="radio_payment_3">Debit Card/Credit Card</string>
    <string name="radio_payment_4">Paypal</string>
    <string name="cart_product">Cart Product</string>
    <string name="confirm">Confirm</string>
    <string name="categoryId">categoryId</string>
    <string name="productId">productId</string>
    <string name="order">Order</string>
    <string name="order_details">Order Details</string>
    <string name="payment_option">Payment Option</string>
    <string name="details">Details</string>
    <string name="support">SupportChat</string>
</resources>