<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/sea_sunset"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.cart.CheckoutSummaryFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cart_product"
        android:text="@string/cart_product"
        style="@style/BasicTextViewStyle"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recyclerView_summary_cart"
        tools:itemCount="2"
        app:layout_constraintTop_toBottomOf="@id/txt_cart_product"
        tools:listitem="@layout/view_purchase_item"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_summary_total_bill_amount"
        android:text="@string/total_bill_amount"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_summary_cart"
        style="@style/BasicTextViewStyle"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_summary_total_bill_amount_value"
        android:text="@string/amount"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_summary_cart"
        style="@style/BasicTextViewStyle"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_delivery_address"
        android:text="@string/delivery_address"
        android:scrollbarSize="20sp"
        style="@style/BasicTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_summary_total_bill_amount"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_delivery_address"
            android:id="@+id/layout_address">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_summary_address_title"
                android:layout_width="49dp"
                android:layout_height="41dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_summary_address"
                android:layout_width="76dp"
                android:layout_height="30dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_summary_address_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_payment_title"
        android:text="@string/payment_title"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_address"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_payment_info"
        android:text="@string/payment_info"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_address"
        app:layout_constraintStart_toEndOf="@id/txt_payment_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_summary_confirm_place"
        android:text="@string/confirm_place"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/btn_fire_color"
        android:textSize="20sp"/>









</androidx.constraintlayout.widget.ConstraintLayout>