<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.Order.OrderFragmentDetails">

<androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_id"
        android:text="@string/order_id"
        style="@style/BasicTextViewStyle"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_status"
        android:text="@string/order_status"
        android:textSize="25sp"
        style="@style/BasicTextViewStyle"
        app:layout_constraintTop_toBottomOf="@id/txt_order_id"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_id_value"
        android:text="@string/order_id"
        style="@style/BasicTextViewStyle"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_order_status_value"
        android:text="@string/order_status"
        android:textSize="25sp"
        style="@style/BasicTextViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_order_id"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recyclerView_purchase_item"
        tools:itemCount="2"
        tools:listitem="@layout/view_purchase_item"
        app:layout_constraintTop_toBottomOf="@id/txt_order_status"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_total_bill_amount"
        android:text="@string/total_bill_amount"
        style="@style/BasicTextViewStyle"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_purchase_item"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_total_bill_amount_value"
        android:text="@string/amount"
        style="@style/BasicTextViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_purchase_item"
        android:textSize="25sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_delivery_address"
        android:text="@string/delivery_address"
        android:scrollbarSize="20sp"
        style="@style/BasicTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_total_bill_amount"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:id="@+id/cardView_address"
        app:cardBackgroundColor="#F9E3B5"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_delivery_address">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:id="@+id/layout_address">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_address_title"
                android:text="@string/title"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_address"
                android:text="@string/address"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/txt_address_title"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_payment_title"
        android:text="@string/payment_option"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cardView_address"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_payment_info"
        android:text="@string/payment_info"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cardView_address"
        app:layout_constraintStart_toEndOf="@id/txt_payment_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_confirm"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/support_btn_bg"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>