<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txt_nv_head_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        style="@style/BasicTextViewStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txt_nv_head_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        style="@style/BasicTextViewStyle"
        app:layout_constraintTop_toBottomOf="@id/txt_nv_head_name"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txt_nv_head_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_phone"
        style="@style/BasicTextViewStyle"
        app:layout_constraintTop_toBottomOf="@id/txt_nv_head_email"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>